samples/_failures_safe/1761794528_095292_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c332545e.c: In function ‘main’:
./samples/SAFE/__tmp_c332545e.c:159:5: error: expected declaration or statement at end of input
  159 |     if (multiply_matrices(&stack_matrices[0], &stack_matrices[1], heap_result)) {
      |     ^~
./samples/SAFE/__tmp_c332545e.c:159:5: error: expected declaration or statement at end of input
